# WaveFunctionCollapse

./: .gitignore  README.md
WFC/: CartesianTopology.h  GridTopology.h  Node.h  Topology.h
docs/: Doxyfile
example/: CMakeLists.txt  Pipes.cpp  Pipes.h  Sudoku.cpp  Sudoku.h  main.cpp
